--- a/index.html
+++ b/index.html
@@ -4,31 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="bar">
-        <i class="fa-solid fa-angle-left"></i>
-        <i class="fa-solid fa-bars"></i>
-      </div>
+    <h1>javascript(js) lesson 1</h1>
+    <p></p>
+    <button></button>
+    <img src="" alt="" />
 
-      <img
-        src="https://media.pitchfork.com/photos/668ec9e2234f993753199dcd/16:9/w_4000,h_2250,c_limit/Eminem.jpg"
-        alt=""
-      />
-      <h1 class="name">mockingbird</h1>
-      <p>Eminem</p>
-      <input type="range" />
-      <div class="bottom">
-        <i class="fa-solid fa-play"></i>
-        <i class="fa-solid fa-forward"></i>
-        <i class="fa-solid fa-backward"></i>
-      </div>
-    </div>
+    <script src="main.js"></script>
   </body>
 </html>
